# my_custom_memory_allocator

./: CMakeLists.txt  README.md  allocator.c  allocator.h
tests/: basic_test1.c  basic_test2.c  defrag_test1.c  defrag_test2.c  defrag_test3.c  defrag_test4.c
